13136 FIX SLA View: Displaced timelines
The timelines in SLA views were displaced.
First of all the Availability timeline was shifted to the right
and all other timelines would not line up with the result row

SUP-3068

--- a/web/htdocs/themes/facelift/scss/_variables.scss
+++ b/web/htdocs/themes/facelift/scss/_variables.scss
@@ -394,6 +394,7 @@ $button-spacer-color: rgb(180, 180, 180);
 
 $timeline-hilite-border: null;
 $timetable-hilite-bg-color: darken($bg-color, 15%);
+$timerange-width: 800px;
 
 $pnp-graph-img-border-color: $color-table-border;
 $graph-hover-popup-font-color: $font-color;
