--- a/web/htdocs/themes/modern-dark/scss/_variables.scss
+++ b/web/htdocs/themes/modern-dark/scss/_variables.scss
@@ -384,6 +384,7 @@ $button-spacer-color: rgb(90, 90, 90);
 
 $timeline-hilite-border: 2px solid rgb(220, 220, 220);
 $timetable-hilite-bg-color: lighten($bg-color, 15%);
+$timerange-width: 800px;
 
 $pnp-graph-img-border-color: rgb(240, 240, 240);
 $graph-hover-popup-font-color: $font-color;
